// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkBookPackage() -  rut should pass 1`] = `
Object {
  "checkedFilenames": Array [
    "08-RUT.usfm",
    "08-RUT.usfm",
    "08-RUT.usfm",
    "en_tn_08-RUT.tsv",
    "rut/01/01.md",
    "rut/01/03.md",
    "rut/01/05.md",
    "rut/01/06.md",
    "rut/01/08.md",
    "rut/01/09.md",
    "rut/01/13.md",
    "rut/01/16.md",
    "rut/01/17.md",
    "rut/01/19.md",
    "rut/01/20.md",
    "rut/01/22.md",
    "rut/02/01.md",
    "rut/02/02.md",
    "rut/02/04.md",
    "rut/02/05.md",
    "rut/02/08.md",
    "rut/02/10.md",
    "rut/02/11.md",
    "rut/02/12.md",
    "rut/02/15.md",
    "rut/02/16.md",
    "rut/02/19.md",
    "rut/02/20.md",
    "rut/02/22.md",
    "rut/02/23.md",
    "rut/03/01.md",
    "rut/03/03.md",
    "rut/03/04.md",
    "rut/03/05.md",
    "rut/03/08.md",
    "rut/03/09.md",
    "rut/03/10.md",
    "rut/03/11.md",
    "rut/03/12.md",
    "rut/03/13.md",
    "rut/03/14.md",
    "rut/03/15.md",
    "rut/03/18.md",
    "rut/04/01.md",
    "rut/04/02.md",
    "rut/04/03.md",
    "rut/04/04.md",
    "rut/04/05.md",
    "rut/04/06.md",
    "rut/04/08.md",
    "rut/04/09.md",
    "rut/04/10.md",
    "rut/04/12.md",
    "rut/04/15.md",
    "rut/04/16.md",
    "rut/04/17.md",
  ],
  "checkedRepoNames": Array [
    "UHB",
    "ULT",
    "UST",
    "TN",
    "TQ",
  ],
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "9",
      "bookID": "rut",
      "characterIndex": 52,
      "extra": "TN",
      "extract": "…ality - th…",
      "fieldName": "OccurrenceNote",
      "filename": "en_tn_08-RUT.tsv",
      "lineNumber": 92,
      "location": " in en rut book package from unfoldingWord master branch",
      "message": "Unexpected - character after space",
      "priority": 191,
      "rowID": "xc6u",
    },
    Object {
      "C": "4",
      "V": "14",
      "bookID": "rut",
      "characterIndex": 155,
      "extra": "TN",
      "extract": "…” or “ we …",
      "fieldName": "OccurrenceNote",
      "filename": "en_tn_08-RUT.tsv",
      "lineNumber": 255,
      "location": " in en rut book package from unfoldingWord master branch",
      "message": "Unexpected space after “ character",
      "priority": 192,
      "rowID": "ab47",
    },
    Object {
      "C": "1",
      "V": "20",
      "bookID": "rut",
      "characterIndex": 116,
      "extra": "TQ",
      "extract": "…with␣her.␣",
      "fieldName": "",
      "filename": "20.md",
      "lineNumber": 3,
      "location": " in unfoldingWord en_tq (master)",
      "message": "Unexpected trailing space(s)",
      "priority": 105,
    },
    Object {
      "C": "3",
      "V": "9",
      "bookID": "rut",
      "details": "(left=0, right=1)",
      "extra": "TQ",
      "fieldName": "",
      "filename": "09.md",
      "lineNumber": 3,
      "location": " in unfoldingWord en_tq (master)",
      "message": "Mismatched “” characters",
      "priority": 163,
    },
  ],
  "successList": Array [
    "Checked UHB file: 08-RUT.usfm",
    "Checked ULT file: 08-RUT.usfm",
    "Checked UST file: 08-RUT.usfm",
    "Checked TN file: en_tn_08-RUT.tsv",
    "Checked 52 TQ files",
  ],
}
`;

exports[`checkBookPackage() -  tit should fail on missing repo 1`] = `
Object {
  "checkedFilenames": Array [
    "57-TIT.usfm",
    "57-TIT.usfm",
    "en_tn_57-TIT.tsv",
    "tit/01/01.md",
    "tit/01/02.md",
    "tit/01/03.md",
    "tit/01/04.md",
    "tit/01/06.md",
    "tit/01/07.md",
    "tit/01/08.md",
    "tit/01/09.md",
    "tit/01/11.md",
    "tit/01/13.md",
    "tit/01/14.md",
    "tit/01/15.md",
    "tit/01/16.md",
    "tit/02/02.md",
    "tit/02/03.md",
    "tit/02/04.md",
    "tit/02/07.md",
    "tit/02/08.md",
    "tit/02/09.md",
    "tit/02/10.md",
    "tit/02/11.md",
    "tit/02/12.md",
    "tit/02/13.md",
    "tit/02/14.md",
    "tit/03/01.md",
    "tit/03/03.md",
    "tit/03/05.md",
    "tit/03/07.md",
    "tit/03/08.md",
    "tit/03/09.md",
    "tit/03/10.md",
    "tit/03/14.md",
  ],
  "checkedRepoNames": Array [
    "UGNT",
    "UST",
    "TN",
    "TQ",
  ],
  "noticeList": Array [
    Object {
      "bookID": "tit",
      "extra": "ULT",
      "filename": "57-TIT.usfm",
      "location": " in ULT in en tit book package from unfoldingWord master branch: Simulated error - Could not find src/__tests__/fixtures/unfoldingWord/en_ult/57-TIT.usfm",
      "message": "Failed to load",
      "priority": 996,
      "repoName": "en_ult",
    },
  ],
  "successList": Array [
    "Checked UGNT file: 57-TIT.usfm",
    "Checked UST file: 57-TIT.usfm",
    "Checked TN file: en_tn_57-TIT.tsv",
    "Checked 32 TQ files",
  ],
}
`;

exports[`checkBookPackage() -  tit should fail on unsupported language 1`] = `
Object {
  "checkedFilenames": Array [
    "57-TIT.usfm",
  ],
  "checkedRepoNames": Array [
    "UGNT",
    "TQ",
  ],
  "noticeList": Array [
    Object {
      "bookID": "tit",
      "extra": "GLT",
      "filename": "57-TIT.usfm",
      "location": " in GLT in zzz tit book package from unfoldingWord master branch: Could not find src/__tests__/fixtures/unfoldingWord/zzz_glt/57-TIT.usfm",
      "message": "Failed to load",
      "priority": 996,
      "repoName": "zzz_glt",
    },
    Object {
      "bookID": "tit",
      "extra": "GST",
      "filename": "57-TIT.usfm",
      "location": " in GST in zzz tit book package from unfoldingWord master branch: Could not find src/__tests__/fixtures/unfoldingWord/zzz_gst/57-TIT.usfm",
      "message": "Failed to load",
      "priority": 996,
      "repoName": "zzz_gst",
    },
    Object {
      "bookID": "tit",
      "extra": "TN",
      "filename": "zzz_tn_57-TIT.tsv",
      "location": " in TN in zzz tit book package from unfoldingWord master branch: Could not find src/__tests__/fixtures/unfoldingWord/zzz_tn/zzz_tn_57-TIT.tsv",
      "message": "Failed to load",
      "priority": 996,
      "repoName": "zzz_tn",
    },
    Object {
      "C": "",
      "V": "",
      "bookID": "tit",
      "extra": "TQ",
      "location": "in unfoldingWord zzz_tq (master)",
      "message": "Failed to load",
      "priority": 996,
    },
  ],
  "successList": Array [
    "Checked UGNT file: 57-TIT.usfm",
  ],
}
`;

exports[`checkBookPackage() -  tit should pass 1`] = `
Object {
  "checkedFilenames": Array [
    "57-TIT.usfm",
    "57-TIT.usfm",
    "57-TIT.usfm",
    "en_tn_57-TIT.tsv",
    "tit/01/01.md",
    "tit/01/02.md",
    "tit/01/03.md",
    "tit/01/04.md",
    "tit/01/06.md",
    "tit/01/07.md",
    "tit/01/08.md",
    "tit/01/09.md",
    "tit/01/11.md",
    "tit/01/13.md",
    "tit/01/14.md",
    "tit/01/15.md",
    "tit/01/16.md",
    "tit/02/02.md",
    "tit/02/03.md",
    "tit/02/04.md",
    "tit/02/07.md",
    "tit/02/08.md",
    "tit/02/09.md",
    "tit/02/10.md",
    "tit/02/11.md",
    "tit/02/12.md",
    "tit/02/13.md",
    "tit/02/14.md",
    "tit/03/01.md",
    "tit/03/03.md",
    "tit/03/05.md",
    "tit/03/07.md",
    "tit/03/08.md",
    "tit/03/09.md",
    "tit/03/10.md",
    "tit/03/14.md",
  ],
  "checkedRepoNames": Array [
    "UGNT",
    "ULT",
    "UST",
    "TN",
    "TQ",
  ],
  "noticeList": Array [],
  "successList": Array [
    "Checked UGNT file: 57-TIT.usfm",
    "Checked ULT file: 57-TIT.usfm",
    "Checked UST file: 57-TIT.usfm",
    "Checked TN file: en_tn_57-TIT.tsv",
    "Checked 32 TQ files",
  ],
}
`;
